order service steps

--- a/Customer/onestepmode.html
+++ b/Customer/onestepmode.html
@@ -111,10 +111,13 @@
                         <label for="exampleFormControlTextarea1">Special Instructions </label>
                         <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                     </div>
-                    <a href="placeOrderSuccess.html" class="btn nz-btn-gold text-uppercase font-weight-bold">Place
-                        Order</a>
+                    <div class="row">
+                        <div class="col-12 col-lg-4 offset-lg-8">
+                            <a href="placeOrderSuccess.html"
+                                class="btn nz-btn-gold btn-block  text-uppercase font-weight-bold">Submit Order</a>
+                        </div>
+                    </div>
                 </form>
-
             </div>
         </div>
     </section>
