--- a/Customer/select_service_mode.html
+++ b/Customer/select_service_mode.html
@@ -192,7 +192,7 @@
                     <div class="card rounded-lg">
                         <div class="card-body pb-0">
                             <h5 class="card-title font-weight-bold d-flex align-items-center"><i
-                                    class="fas fa-space-shuttle fa-3x mr-3"></i> Easy Mode</h5>
+                                    class="fas fa-running fa-3x mr-3"></i> Easy Mode</h5>
                             <p class="card-text">Just pick your service, <span class="nz-pill-gold"> upload your
                                     document and we will call </span> you later to complete the process </p>
                         </div>
