--- a/Customer/multistepmode.html
+++ b/Customer/multistepmode.html
@@ -177,6 +177,12 @@
                         <div class="tab-pane fade" id="requiredSample" role="tabpanel"
                             aria-labelledby="requiredSample-tab">requiredSample-tab...</div>
                     </div>
+                    <div class="row">
+                        <div class="col-12 col-lg-4 offset-lg-8">
+                            <a href="placeOrderSuccess.html"
+                                class="btn nz-btn-gold btn-block  text-uppercase font-weight-bold">Submit Order</a>
+                        </div>
+                    </div>
                 </div>
 
             </div>
