--- a/Customer/dashboad.html
+++ b/Customer/dashboad.html
@@ -127,7 +127,7 @@
                         </div>
                     </div>
 
-                    <div class="col-12 mb-4 col-lg-7">
+                    <div class="col-12 mb-4 col-lg-6 offset-lg-1">
                         <h1 class="section-title-side"><span>Invoices</span></h1>
                         <ul class="list-group recent-odrder-list">
                             <li class="list-group-item card-hover my-2">
@@ -226,8 +226,8 @@
                     </div>
 
                     <div class="col-12 col-lg-12">
-                        <div class="row">
-                            <div class="col-12 col-lg-7">
+                        <div class="row mt-5">
+                            <div class="col-12 col-lg-5">
                                 <h1 class="section-title-side"><span>Recent orders</span></h1>
                                 <ul class="recent-odrder-list list-group">
                                     <li class="list-group-item order-card my-2"> <a href="orderDetails.html"
@@ -311,70 +311,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <!-- <div class="col-12 col-lg-4">
-                                <h1 class="section-title-side"><span>My Recent orders</span></h1>
-                                <div class="recent-odrder-list px-2">
-
-                                    <div class="order-card card border-secondary mb-3 rounded-lg">
-                                        <div
-                                            class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
-                                            <span class="h5"><i
-                                                    class="fas fa-chevron-circle-right mr-2"></i>#20545986</span>
-                                            <span class=" badge badge-pill badge-secondary">Created</span>
-                                        </div>
-                                        <div class="card-body pt-0 text-dark">
-                                            <h5 class="card-title">Translation</h5>
-                                            <p class="card-text">Last update: <span class="text-muted">2019-07-28
-                                                    09:15</span> </p>
-                                        </div>
-                                    </div>
-
-                                    <div class="order-card card border-primary mb-3 rounded-lg">
-                                        <div
-                                            class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
-                                            <span class="h5"><i
-                                                    class="fas fa-chevron-circle-right mr-2"></i>#20545986</span>
-                                            <span class=" badge badge-pill badge-primary">Approved</span>
-                                        </div>
-                                        <div class="card-body pt-0 text-dark">
-                                            <h5 class="card-title">Translation</h5>
-                                            <p class="card-text">Last update: <span class="text-muted">2019-07-28
-                                                    09:15</span> </p>
-                                        </div>
-                                    </div>
-
-                                    <div class="order-card card border-success mb-3 rounded-lg">
-                                        <div
-                                            class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
-                                            <span class="h5"><i
-                                                    class="fas fa-chevron-circle-right mr-2"></i>#20545986</span>
-                                            <span class=" badge badge-pill badge-success">Completed</span>
-                                        </div>
-                                        <div class="card-body pt-0 text-dark">
-                                            <h5 class="card-title">Translation</h5>
-                                            <p class="card-text">Last update:
-                                                <span class="text-muted">2019-07-28 09:15</span>
-                                            </p>
-                                        </div>
-                                    </div>
-
-                                    <div class="order-card card border-danger mb-3 rounded-lg">
-                                        <div
-                                            class="pt-3 px-3 h5 d-flex bg-white justify-content-between align-items-baseline">
-                                            <span class="h5"><i
-                                                    class="fas fa-chevron-circle-right mr-2"></i>#20545986</span>
-                                            <span class=" badge badge-pill badge-danger">Rejected</span>
-                                        </div>
-                                        <div class="card-body pt-0 text-dark">
-                                            <h5 class="card-title">Translation</h5>
-                                            <p class="card-text">Last update: <span class="text-muted">2019-07-28
-                                                    09:15</span> </p>
-                                        </div>
-                                    </div>
-
-                                </div>
-                            </div> -->
-                            <div class="col-12 col-lg-5">
+                            <div class="col-12 col-lg-6 offset-lg-1">
                                 <h1 class="section-title-side"><span>Need Help</span></h1>
                             </div>
                         </div>
