fix steper alignments

--- a/Customer/multistepmode.html
+++ b/Customer/multistepmode.html
@@ -106,60 +106,93 @@
                     <ul class="nav nav-pills nav-fill" id="myTab" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" id="files-tab" data-toggle="tab" href="#files" role="tab"
-                                aria-controls="files" aria-selected="true"><i
-                                    class="d-block fa-2x mb-2 far fa-copy"></i>Upload<br />
-                                Files</a>
+                                aria-controls="files" aria-selected="true">
+                                <i class="d-block fa-2x mb-2 far fa-copy"></i>
+                                <span>
+                                    Upload<br /> Files
+                                </span>
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="targetLanguage-tab" data-toggle="tab" href="#targetLanguage"
-                                role="tab" aria-controls="targetLanguage" aria-selected="false"><i
-                                    class="d-block fa-2x mb-2 fas fa-language"></i>Target<br /> Language</a>
+                                role="tab" aria-controls="targetLanguage" aria-selected="false">
+                                <i class="d-block fa-2x mb-2 fas fa-language"></i>
+                                <span>
+                                    Target<br /> Language
+                                </span>
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="stamp-tab" data-toggle="tab" href="#stamp" role="tab"
-                                aria-controls="stamp" aria-selected="false"><i
-                                    class="d-block fa-2x mb-2 fas fa-stamp"></i>Stamp</a>
+                                aria-controls="stamp" aria-selected="false">
+                                <i class="d-block fa-2x mb-2 fas fa-stamp"></i>
+                                <span>
+                                    Stamp
+                                </span>
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="deliveryTime-tab" data-toggle="tab" href="#deliveryTime" role="tab"
-                                aria-controls="deliveryTime" aria-selected="false"><i
-                                    class="d-block fa-2x mb-2 fas fa-business-time"></i>Delivery<br /> Time</a>
+                                aria-controls="deliveryTime" aria-selected="false">
+                                <i class="d-block fa-2x mb-2 fas fa-business-time"></i>
+                                <span>
+                                    Delivery<br /> Time
+                                </span>
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="budget-tab" data-toggle="tab" href="#budget" role="tab"
-                                aria-controls="budget" aria-selected="false"><i
-                                    class="d-block fa-2x mb-2 fas fa-coins"></i>
-                                Budget</a>
+                                aria-controls="budget" aria-selected="false">
+                                <i class="d-block fa-2x mb-2 fas fa-coins"></i>
+                                <span>
+
+                                    Budget
+                                </span>
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="additionalService-tab" data-toggle="tab" href="#additionalService"
-                                role="tab" aria-controls="additionalService" aria-selected="false"><i
-                                    class="d-block fa-2x mb-2 fas fa-info-circle"></i>Additional<br /> Service</a>
+                                role="tab" aria-controls="additionalService" aria-selected="false">
+                                <i class="d-block fa-2x mb-2 fas fa-info-circle"></i>
+                                <span>
+                                    Additional<br /> Service
+                                </span>
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="confidentialityAgreement-tab" data-toggle="tab"
                                 href="#confidentialityAgreement" role="tab" aria-controls="confidentialityAgreement"
-                                aria-selected="false"><i
-                                    class="d-block fa-2x mb-2 fas fa-info-circle"></i>Confidentiality
-                                <br />
-                                Agreement</a>
+                                aria-selected="false">
+                                <i class="d-block fa-2x mb-2 fas fa-info-circle"></i>
+                                <span>
+                                    Confidentiality <br /> Agreement
+                                </span>
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="specialInstructions-tab" data-toggle="tab"
                                 href="#specialInstructions" role="tab" aria-controls="specialInstructions"
-                                aria-selected="false"><i
-                                    class="d-block fa-2x mb-2 fas fa-clipboard-list"></i>Special<br />
-                                Instructions</a>
+                                aria-selected="false">
+                                <i class="d-block fa-2x mb-2 fas fa-clipboard-list"></i>
+                                <span>
+                                    Special<br /> Instructions
+                                </span>
+                            </a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" id="requiredSample-tab" data-toggle="tab" href="#requiredSample"
                                 role="tab" aria-controls="requiredSample" aria-selected="false">
-                                <i class="d-block fa-2x mb-2 fab fa-firstdraft"></i>Required<br /> Sample</a>
+                                <i class="d-block fa-2x mb-2 fab fa-firstdraft"></i>
+                                <span>
+                                    Required<br /> Sample
+                                </span>
+                            </a>
                         </li>
                     </ul>
                     <div class="tab-content mt-3" id="myTabContent">
                         <div class="tab-pane fade show active" id="files" role="tabpanel" aria-labelledby="files-tab">
-                            files-tab...</div>
+                            
+                        </div>
                         <div class="tab-pane fade" id="targetLanguage" role="tabpanel"
                             aria-labelledby="targetLanguage-tab">targetLanguage-tab...</div>
                         <div class="tab-pane fade" id="stamp" role="tabpanel" aria-labelledby="stamp-tab">stamp-tab...
