--- a/Customer/orderDetails.html
+++ b/Customer/orderDetails.html
@@ -106,37 +106,49 @@
                                 <li class="nav-item">
                                     <a class="nav-link">
                                         <i class="d-block fa-2x mb-2 fas fa-file-medical"></i>
-                                        Created
+                                        <span>
+                                            Created
+                                        </span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link">
                                         <i class="d-block fa-2x mb-2 fas fa-user-clock"></i>
-                                        Pending <br /> Approval
+                                        <span>
+                                            Pending <br /> Approval
+                                        </span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link">
                                         <i class="d-block fa-2x mb-2 fas fa-thumbs-up"></i>
-                                        Approved <br /> (Waiting For Bids)
+                                        <span>
+                                            Approved <br /> (Waiting For Bids)
+                                        </span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link active">
                                         <i class="d-block fa-2x mb-2 fas fa-user-ninja"></i>
-                                        Receive Bids
+                                        <span>
+                                            Receive Bids
+                                        </span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link">
                                         <i class="d-block fa-2x mb-2 fas fa-cog"></i>
-                                        In-Progress
+                                        <span>
+                                            In-Progress
+                                        </span>
                                     </a>
                                 </li>
                                 <li class="nav-item">
                                     <a class="nav-link">
                                         <i class="d-block fa-2x mb-2 fas fa-check"></i>
-                                        Completed
+                                        <span>
+                                            Completed
+                                        </span>
                                     </a>
                                 </li>
                             </ul>
@@ -196,12 +208,13 @@
                                         id="exampleFormControlTextarea1" rows="3"></textarea>
                                     <div class="custom-file rounded-pill my-2">
                                         <input type="file" class="custom-file-input rounded-pill " id="customFile">
-                                        <label class="custom-file-label rounded-pill " for="customFile">Add Attachment</label>
+                                        <label class="custom-file-label rounded-pill " for="customFile">Add
+                                            Attachment</label>
                                     </div>
                                     <ul class="files-list list-inline d-flex flex-row flex-wrap ">
-                                        <li class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
-                                            <div
-                                                class=" d-flex flex-column align-items-center m-1">
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
                                                 <i class="far fa-file"></i>
                                                 <p class="m-0 small">bdudj.docx</p>
                                             </div>
@@ -209,9 +222,9 @@
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
                                         </li>
-                                        <li class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
-                                            <div
-                                                class=" d-flex flex-column align-items-center m-1">
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
                                                 <i class="far fa-file"></i>
                                                 <p class="m-0 small">bdudj.docx</p>
                                             </div>
@@ -219,9 +232,9 @@
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
                                         </li>
-                                        <li class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
-                                            <div
-                                                class=" d-flex flex-column align-items-center m-1">
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
                                                 <i class="far fa-file"></i>
                                                 <p class="m-0 small">bdudj.docx</p>
                                             </div>
@@ -229,9 +242,9 @@
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
                                         </li>
-                                        <li class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
-                                            <div
-                                                class=" d-flex flex-column align-items-center m-1">
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
                                                 <i class="far fa-file"></i>
                                                 <p class="m-0 small">bdudj.docx</p>
                                             </div>
@@ -239,9 +252,9 @@
                                                 <span aria-hidden="true">&times;</span>
                                             </button>
                                         </li>
-                                        <li class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
-                                            <div
-                                                class=" d-flex flex-column align-items-center m-1">
+                                        <li
+                                            class="file-item list-inline-item d-flex flex-row mt-1 badge badge-pill badge-warning">
+                                            <div class=" d-flex flex-column align-items-center m-1">
                                                 <i class="far fa-file"></i>
                                                 <p class="m-0 small">bdudj.docx</p>
                                             </div>
