fix steper alignments

--- a/Customer/multistepmode.html
+++ b/Customer/multistepmode.html
@@ -191,8 +191,7 @@
                     </ul>
                     <div class="tab-content mt-3" id="myTabContent">
                         <div class="tab-pane fade show active" id="files" role="tabpanel" aria-labelledby="files-tab">
-                            
-                        </div>
+                            files-tab...</div>
                         <div class="tab-pane fade" id="targetLanguage" role="tabpanel"
                             aria-labelledby="targetLanguage-tab">targetLanguage-tab...</div>
                         <div class="tab-pane fade" id="stamp" role="tabpanel" aria-labelledby="stamp-tab">stamp-tab...
