--- a/Customer/multistepmode.html
+++ b/Customer/multistepmode.html
@@ -103,7 +103,7 @@
                             Mode</span></h1>
                 <div class="multi-steper">
 
-                    <ul class="nav nav-pills nav-fill" id="myTab" role="tablist">
+                    <ul class="nav nav-pills nav-fill" id="multiStepTabs" role="tablist">
                         <li class="nav-item">
                             <a class="nav-link active" id="files-tab" data-toggle="tab" href="#files" role="tab"
                                 aria-controls="files" aria-selected="true">
@@ -191,9 +191,50 @@
                     </ul>
                     <div class="tab-content mt-3" id="myTabContent">
                         <div class="tab-pane fade show active" id="files" role="tabpanel" aria-labelledby="files-tab">
-                            files-tab...</div>
+                            <form>
+                                <div class="form-group">
+                                    <div class="custom-file">
+                                        <input type="file" class="custom-file-input" id="customFile">
+                                        <label class="custom-file-label" for="customFile">Choose file</label>
+                                    </div>
+                                </div>
+                            </form>
+                        </div>
                         <div class="tab-pane fade" id="targetLanguage" role="tabpanel"
-                            aria-labelledby="targetLanguage-tab">targetLanguage-tab...</div>
+                            aria-labelledby="targetLanguage-tab">
+                            <p class="section-title-centerd my-4"><span>From</span></p>
+                            <div class="btn-group d-flex flex-wrap flex-row p-0 justify-content-center" role="group"
+                                aria-label="Basic example">
+                                <button class="btn btn-warning m-2 "><span>English</span></button>
+                                <button class="btn btn-outline-warning m-2 "><span>Arabic</span></button>
+                                <button class="btn btn-outline-warning m-2 "><span>Danish</span></button>
+                                <button class="btn btn-outline-warning m-2 "><span>Korean</span></button>
+                                <button class="btn btn-outline-warning m-2 "><span>Dutch</span></button>
+                                <button class="btn btn-outline-warning m-2 "><span>French</span></button>
+                                <button
+                                    class="btn btn-outline-warning m-2 d-flex flex-row justify-content-stretch align-items-center">
+                                    <span class="mr-2">Other</span>
+                                    <input type="text" class="form-control w-100" placeholder="type your language">
+                                </button>
+                            </div>
+
+                            <p class="section-title-centerd my-4"><span>To</span></p>
+                            <div class="btn-group d-flex flex-wrap flex-row p-0 justify-content-center" role="group"
+                                aria-label="Basic example">
+                                <button class="btn btn-outline-warning m-2 "><span>English</span></button>
+                                <button class="btn btn-warning m-2 "><span>Arabic</span></button>
+                                <button class="btn btn-outline-warning m-2 "><span>Danish</span></button>
+                                <button class="btn btn-outline-warning m-2 "><span>Korean</span></button>
+                                <button class="btn btn-outline-warning m-2 "><span>Dutch</span></button>
+                                <button class="btn btn-outline-warning m-2 "><span>French</span></button>
+                                <button
+                                    class="btn btn-outline-warning m-2 d-flex flex-row justify-content-stretch align-items-center">
+                                    <span class="mr-2">Other</span>
+                                    <input type="text" class="form-control w-100" placeholder="type your language">
+                                </button>
+                            </div>
+
+                        </div>
                         <div class="tab-pane fade" id="stamp" role="tabpanel" aria-labelledby="stamp-tab">stamp-tab...
                         </div>
                         <div class="tab-pane fade" id="deliveryTime" role="tabpanel" aria-labelledby="deliveryTime-tab">
@@ -209,7 +250,8 @@
                         <div class="tab-pane fade" id="requiredSample" role="tabpanel"
                             aria-labelledby="requiredSample-tab">requiredSample-tab...</div>
                     </div>
-                    <div class="row">
+                    <div class="row mt-5">
+
                         <div class="col-12 col-lg-4 offset-lg-8">
                             <a href="placeOrderSuccess.html"
                                 class="btn nz-btn-gold btn-block  text-uppercase font-weight-bold">Submit Order</a>
