--- a/Customer/multistepmode.html
+++ b/Customer/multistepmode.html
@@ -235,7 +235,31 @@
                             </div>
 
                         </div>
-                        <div class="tab-pane fade" id="stamp" role="tabpanel" aria-labelledby="stamp-tab">stamp-tab...
+                        <div class="tab-pane fade" id="stamp" role="tabpanel" aria-labelledby="stamp-tab">
+                           <div class="container">
+
+                               <div class="row">
+                                   <div class="col-12 col-md-3">
+                                       <div class="custom-control custom-checkbox my-1 mr-sm-2">
+                                           <input type="checkbox" class="custom-control-input" id="customControlInline">
+                                           <label class="custom-control-label" for="customControlInline">Yes I need stamps</label>
+                                        </div>
+                                    </div>
+                                    <div class="col-12 col-md-9">
+                                        <div class="list-group">
+                                            <a href="#" class="list-group-item list-group-item-action nz-btn-gold">Cras justo odio </a>
+                                            <a href="#" class="list-group-item list-group-item-action">Dapibus ac facilisis in</a>
+                                            <a href="#" class="list-group-item list-group-item-action">Morbi leo risus</a>
+                                            <a href="#" class="list-group-item list-group-item-action">Porta ac consectetur ac</a>
+                                            <div href="#" class="list-group-item list-group-item-action ">    
+                                                <div class="form-inline d-flex justify-content-between">
+                                                    <input type="text" class="form-control flex-grow-1" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Other stamps">
+                                                    <div class="btn nz-btn-gold px-4"><i class="fas fa-plus"></i> Add</div>
+                                                </div>
+                                            </div>
+                                          </div>
+                                </div>
+                            </div>
                         </div>
                         <div class="tab-pane fade" id="deliveryTime" role="tabpanel" aria-labelledby="deliveryTime-tab">
                             deliveryTime-tab...</div>
