--- a/Customer/dashboad.html
+++ b/Customer/dashboad.html
@@ -118,7 +118,7 @@
                             </div>
                             <div class="col-12 col-md-12 col-lg-12 mb-4">
                                 <div class="card  h-100 ">
-                                    <a href="select_service_mode.html"
+                                    <a href="selectSubService.html"
                                         class="btn btn-outline-gold text-uppercase font-weight-bold card-body card-hover text-dark  d-flex flex-row align-items-center ">
                                         <p class="lead text-center font-weight-bold m-0 w-100"> CHOOSE OTHER SERVICE</p>
                                     </a>
