--- a/Customer/select_service_mode.html
+++ b/Customer/select_service_mode.html
@@ -99,8 +99,8 @@
                 </div>
             </div>
             <div class="col-12 col-lg-10 shadow py-4 p-4">
-                <h1 class="section-title-side"><span>Select Your Service</span></h1>
-                <div class="row mb-4">
+                <!-- <h1 class="section-title-side"><span>Select Your Service</span></h1>
+                 <div class="row mb-4">
                     <div class="col-12 col-lg-3 bids-options-wrapper mb-4">
                         <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist"
                             aria-orientation="vertical">
@@ -186,7 +186,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div> -->
                 <h1 class="section-title-side"><span>Select Service Mode</span></h1>
                 <div class="row mb-5 card-deck">
                     <div class="card rounded-lg">
