--- a/Customer/payment.html
+++ b/Customer/payment.html
@@ -99,6 +99,58 @@
             </div>
             <div class="col-12 col-lg-9 shadow p-5">
                 <h1 class="section-title-side"><span>INVOICE #78476347932</span></h1>
+                <div class="row">
+                    <div class="col-12 col-lg-8">
+                        <form>
+                            <div class="form-group">
+                                <label for="inputCardNumber">Card Number</label>
+                                <input type="text" class="form-control" id="inputCardNumber"
+                                    placeholder="XXXX XXXX XXXX XXXX">
+                            </div>
+                            <div class="form-row">
+                                <div class="form-group col-md-6">
+                                    <label for="inputCVC">CVC</label>
+                                    <input type="text" class="form-control" id="inputCVC" placeholder="123">
+                                </div>
+                                <div class="form-group col-md-6">
+                                    <label for="inputExpiration">Expiration</label>
+                                    <input type="text" class="form-control" id="inputExpiration" placeholder="MM/YY">
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label for="inputCardName">Card Name</label>
+                                <input type="text" class="form-control" id="inputCardName"
+                                    placeholder="Apartment, studio, or floor">
+                            </div>
+                            <div class="form-group">
+                                <label for="inputEmail">Email</label>
+                                <input type="email" class="form-control" id="inputEmail">
+                            </div>
+
+                            <div class="co-12 col-md-6 offset-md-3 p-0">
+                                <p class="lead d-flex justify-content-center align-items-center text-muted">
+                                    <span class=" mr-2 "> Suported Cards </span>
+                                    <i class="fab fa-2x mx-2 fa-cc-visa"></i>
+                                    <i class="fab fa-2x mx-2 fa-cc-mastercard"></i>
+                                </p>
+                            </div>
+                            <div class="co-12 p-0 mb-3">
+                                <button type="submit" class="btn nz-btn-gold btn-block font-weight-bold py-3">
+                                    <i class="fas mr-1 fa-dollar-sign"></i>Pay
+                                </button>
+                            </div>
+                        </form>
+                    </div>
+                    <div class="col-12 col-lg-4  d-flex justify-content-center align-items-center border-left-lg order-invoice-wrapper flex-column">
+                        <button class="btn nz-btn-gold btn-block font-weight-bold py-3">
+                            <i class="fab mr-1 fa-paypal"></i> PayPal
+                        </button>
+                        <div class="d-block d-sm-none my-5 py-5 display-4 w-100 text-center border-top border-bottom">OR</div>
+
+                    </div>
+                </div>
+
             </div>
         </div>
     </section>
