--- a/Customer/payment.html
+++ b/Customer/payment.html
@@ -121,7 +121,7 @@
                             <div class="form-group">
                                 <label for="inputCardName">Card Name</label>
                                 <input type="text" class="form-control" id="inputCardName"
-                                    placeholder="Apartment, studio, or floor">
+                                    placeholder="Your Name">
                             </div>
                             <div class="form-group">
                                 <label for="inputEmail">Email</label>
